made changes in html file

--- a/Login Page/index.html
+++ b/Login Page/index.html
@@ -16,7 +16,7 @@
   <body>
     <section>
       <div class="login-container">
-        <h2>Inicio de sesión</h2>
+        <h2>Login Form</h2>
 
         <form>
           <div class="input-box">
@@ -25,7 +25,7 @@
             </span>
 
             <input required type="email" id="email" />
-            <label for="email">Ingrese su email</label>
+            <label for="email">Enter your mailId</label>
           </div>
 
           <div class="input-box">
@@ -34,20 +34,20 @@
             </span>
 
             <input required type="password" id="contraseña" />
-            <label for="contraseña">Ingrese su contraseña</label>
+            <label for="contraseña">Enter your password</label>
           </div>
 
           <div class="remember-forgot">
-            <label> <input type="checkbox" /> Recordarme </label>
+            <label> <input type="checkbox" /> check</label>
 
-            <a href="#">Olvidé la contraseña</a>
+            <a href="#">Forgot password</a>
           </div>
 
-          <button type="submit">Iniciar sesión</button>
+          <button type="submit">Submit</button>
         </form>
 
         <div class="create-account">
-          <a href="#">Crear una cuenta</a>
+          <a href="#">Already a user</a>
         </div>
       </div>
     </section>
